--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,9 +17,9 @@ x-airflow-common:
     AIRFLOW__SMTP__SMTP_STARTTLS: True
     AIRFLOW__SMTP__SMTP_SSL: False
     AIRFLOW__SMTP__SMTP_PORT: 587
-   # AIRFLOW__SMTP__SMTP_MAIL_FROM: aliahmedzekri@gmail.com
-    #AIRFLOW__SMTP__SMTP_USER: aliahmedzekri@gmail.com
-    #AIRFLOW__SMTP__SMTP_PASSWORD: umfiaajjsyaizcmt
+   # AIRFLOW__SMTP__SMTP_MAIL_FROM: ## add yours
+    #AIRFLOW__SMTP__SMTP_USER: ### add yours
+    #AIRFLOW__SMTP__SMTP_PASSWORD: ### add yours
 
 
     
